--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,14 @@
       "es2018",
       "dom"
     ]
+
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization": false
   }
 }
